# vetoescrow

./: .gitignore  LICENSE  PROJECT_REPORT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.pgf/: DESIGN-VetoEscrow.md  VERIFY-VetoEscrow.md  status-VetoEscrow.json
examples/: clearing_report.json  clearing_report.md  decision_batch.json
src/vetoescrow/: __init__.py  adapters.py  audit.py  clearing.py  cli.py  market.py  models.py  validate.py
tests/: test_audit.py  test_clearing.py  test_market_cli.py  test_validate.py
