[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "vetoescrow"
version = "0.1.0"
description = "VetoEscrow: an interruptible clearing gate that prices human veto or modify rights over high-risk AI decisions."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "IdeaFirst" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["ai-governance", "human-oversight", "clearing-market", "veto-rights", "agentops", "audit", "escrow", "ai-safety", "python"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/sadpig70/vetoescrow"
Repository = "https://github.com/sadpig70/vetoescrow"
Issues = "https://github.com/sadpig70/vetoescrow/issues"

[project.scripts]
vetoescrow = "vetoescrow.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
